# codex-skills-agentmd-obsidian

./: .gitignore  AGENTS.md  LICENSE  README.md
mcp/aboot-download/: README.md  aboot_download_config.example.json  aboot_download_mcp.py
mcp/catstudio-device/: catstudio_device_config.example.json  catstudio_device_mcp.py
mcp/catstudio-online-log/: README.md  catstudio_online_log_config.example.json  catstudio_online_log_mcp.py
mcp/everything-search/: LICENSE  README.local.md  README.md  SEARCH_SYNTAX.md  everything_search_config.example.json  pyproject.toml
mcp/weflow-export/: README.md  weflow_export_config.example.json  weflow_export_mcp_server.js
obsidian/Codex/: AGENTS.md  TODO.md
scripts/: install.ps1  install.sh
skills-index/: index.md
skills-index/archive/: index.md
skills-index/firmware/: index.md
skills-index/logs/: index.md
skills-index/memory/: index.md
skills-index/protocol/: index.md
skills-index/release/: index.md
skills-index/zentao/: index.md
skills/aa-skill-router/: SKILL.md
skills/akq-firmware-release/: SKILL.md
skills/asr3601-bug-intake-orchestrator/: SKILL.md
skills/asr3601-cross-branch-porting/: SKILL.md
skills/asr3601-fix-closeout-reporter/: SKILL.md
skills/asr3601-fix-verifier/: SKILL.md
skills/asr3601-lvgl-firmware-triage/: SKILL.md
skills/asr3601-project-onboard/: SKILL.md
skills/asr3601-protocol-branch-matrix/: SKILL.md
skills/asr3602-dump-firmware/: SKILL.md
skills/asr3602-local-build-flash/: SKILL.md
skills/asr360x-bug-delivery-orchestrator/: SKILL.md
skills/catstudio-online-log/: SKILL.md
(+192 files in other folders)
